--- a/res/layout-v21/activity_manager.xml
+++ b/res/layout-v21/activity_manager.xml
@@ -1,214 +1,224 @@
-<android.support.v4.widget.DrawerLayout
-     xmlns:android="http://schemas.android.com/apk/res/android"
-     xmlns:app="http://schemas.android.com/apk/res-auto"
-     xmlns:tools="http://schemas.android.com/tools"
-     android:id="@+id/drawer_layout"
-     android:layout_width="match_parent"
-     android:layout_height="match_parent"
-     android:fitsSystemWindows="true">
-     
-     <RelativeLayout	    
-	    android:layout_width="match_parent"
-	    android:layout_height="match_parent"
-	    android:orientation="vertical">
-	
-         <android.support.v7.widget.Toolbar
-		    android:id="@+id/toolbar"
-		    android:layout_width="match_parent"
-		    android:layout_height="?attr/actionBarSize"
-		    android:background="?attr/colorPrimary"
-		    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-		    app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-		    tools:context=".ManagerActivityLollipop"/>
-	    
-	    <FrameLayout
-	        android:id="@+id/fragment_container"
-	        android:layout_width="match_parent"
-	        android:layout_height="match_parent"
-	        android:layout_below="@id/toolbar" />
-	    
-	    <!-- THE Cloud Drive TABS -->
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true" >
 
-		<TabHost
-	        android:id="@+id/tabhost_cloud_drive"
-	        android:layout_width="match_parent"
-	        android:layout_height="match_parent"
-	        android:background="@color/mega"
-	        android:layout_below="@id/toolbar">
-	
-	        <LinearLayout
-	            android:orientation="vertical"
-	            android:gravity="center"
-	            android:layout_width="match_parent"
-	            android:layout_height="match_parent">
-	
-	           <TabWidget
-	            android:id="@android:id/tabs"
-	            android:layout_width="match_parent"
-	            android:layout_height="wrap_content" 
-	            android:background="@color/mega">
-	       	   </TabWidget>
-	
-	            <FrameLayout
-	                android:id="@android:id/tabcontent"
-	                android:layout_width="0dp"
-	                android:layout_height="0dp"
-	                android:layout_weight="0"/>
-	
-	            <android.support.v4.view.ViewPager
-	                android:id="@+id/cloud_drive_tabs_pager"
-	                android:layout_width="match_parent"
-	                android:layout_height="0dp"
-	                android:layout_weight="1"/>
-	
-	        </LinearLayout>
-	   	</TabHost>
-	
-		<!-- THE CONTACTS TABS -->
-	
-		<TabHost
-	        android:id="@+id/tabhost_contacts"
-	        android:layout_width="match_parent"
-	        android:layout_height="match_parent"
-	        android:background="@color/mega"
-	        android:layout_below="@id/toolbar">
-	
-	        <LinearLayout
-	            android:orientation="vertical"
-	            android:gravity="center"
-	            android:layout_width="match_parent"
-	            android:layout_height="match_parent">
-	
-	           <TabWidget
-	            android:id="@android:id/tabs"
-	            android:layout_width="match_parent"
-	            android:layout_height="wrap_content"
-	            android:background="@color/mega" >
-	       	   </TabWidget>
-	
-	            <FrameLayout
-	                android:id="@android:id/tabcontent"
-	                android:layout_width="0dp"
-	                android:layout_height="0dp"
-	                android:layout_weight="0"/>
-	
-	            <android.support.v4.view.ViewPager
-	                android:id="@+id/contact_tabs_pager"
-	                android:layout_width="match_parent"
-	                android:layout_height="0dp"
-	                android:layout_weight="1"/>
-	
-	        </LinearLayout>
-	    </TabHost>
-	    
-		<!-- THE SHARES TABS -->
-		
-		<TabHost
-	        android:id="@+id/tabhost_shares"
-	        android:background="@color/mega"
-	        android:layout_width="match_parent"
-	        android:layout_height="match_parent"
-	        android:layout_below="@id/toolbar">
-	
-	        <LinearLayout
-	            android:orientation="vertical"
-	            android:gravity="center"
-	            android:layout_width="match_parent"
-	            android:layout_height="match_parent">
-	
-	           <TabWidget
-	            android:id="@android:id/tabs"
-	            android:layout_width="match_parent"
-	            android:layout_height="wrap_content" 
-	            android:background="@color/mega">
-	       	   </TabWidget>
-	
-	            <FrameLayout
-	                android:id="@android:id/tabcontent"
-	                android:layout_width="0dp"
-	                android:layout_height="0dp"
-	                android:layout_weight="0"/>
-	
-	            <android.support.v4.view.ViewPager
-	                android:id="@+id/shares_tabs_pager"
-	                android:layout_width="match_parent"
-	                android:layout_height="0dp"
-	                android:layout_weight="1"/>
-	        </LinearLayout>
-	    </TabHost>
-	    
-	</RelativeLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical" >
 
-     <!-- The navigation drawer 
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+            tools:context=".ManagerActivityLollipop" />
+
+        <FrameLayout
+            android:id="@+id/fragment_container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@id/toolbar" />
+
+        <include
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            layout="@layout/layout_get_pro_account"
+            android:visibility="gone" />
+
+        <include
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            layout="@layout/layout_overquota_alert"
+            android:visibility="gone" />
+
+        <!-- THE Cloud Drive TABS -->
+
+        <TabHost
+            android:id="@+id/tabhost_cloud_drive"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@id/toolbar"
+            android:background="@color/mega" >
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:orientation="vertical" >
+
+                <TabWidget
+                    android:id="@android:id/tabs"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/mega" >
+                </TabWidget>
+
+                <FrameLayout
+                    android:id="@android:id/tabcontent"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:layout_weight="0" />
+
+                <android.support.v4.view.ViewPager
+                    android:id="@+id/cloud_drive_tabs_pager"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1" />
+            </LinearLayout>
+        </TabHost>
+
+        <!-- THE CONTACTS TABS -->
+
+        <TabHost
+            android:id="@+id/tabhost_contacts"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@id/toolbar"
+            android:background="@color/mega" >
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:orientation="vertical" >
+
+                <TabWidget
+                    android:id="@android:id/tabs"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/mega" >
+                </TabWidget>
+
+                <FrameLayout
+                    android:id="@android:id/tabcontent"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:layout_weight="0" />
+
+                <android.support.v4.view.ViewPager
+                    android:id="@+id/contact_tabs_pager"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1" />
+            </LinearLayout>
+        </TabHost>
+
+        <!-- THE SHARES TABS -->
+
+        <TabHost
+            android:id="@+id/tabhost_shares"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@id/toolbar"
+            android:background="@color/mega" >
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:orientation="vertical" >
+
+                <TabWidget
+                    android:id="@android:id/tabs"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/mega" >
+                </TabWidget>
+
+                <FrameLayout
+                    android:id="@android:id/tabcontent"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:layout_weight="0" />
+
+                <android.support.v4.view.ViewPager
+                    android:id="@+id/shares_tabs_pager"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1" />
+            </LinearLayout>
+        </TabHost>
+    </RelativeLayout>
+
+    <!--
+    The navigation drawer 
     <include
         layout="@layout/navigation_drawer"/>
     -->
-     <android.support.design.widget.NavigationView
-         android:id="@+id/navigation_view"
-         android:layout_width="wrap_content"
-         android:layout_height="match_parent"
-         android:layout_gravity="start"
-         android:background="#ffffff"
-         app:headerLayout="@layout/nav_header"
-         app:itemTextColor="@color/drawer_item_text"
-         app:itemIconTint="@color/drawer_item_text"
-         app:menu="@menu/navigation_drawer_items"
-         android:paddingBottom="96dp"
-         android:clipToPadding="false"
-         app:itemBackground="@drawable/navigation_view_item_background" >
-	    
-         
-         <RelativeLayout
-          	android:layout_width="match_parent"
-		    android:layout_height="96dp"
-		    android:layout_gravity="bottom"
-		    android:layout_marginBottom="-96dp"
-		    android:background="#ffffff">
-		    
-             <TextView
-		        android:id="@+id/navigation_drawer_used_space_text"
-		        style="@style/NavDrawerAccountUsedSpaceText"
-		        android:text="@string/my_account_used_space"
-		        android:textStyle="bold"
-		        tools:fontFamily="sans-serif-medium"/>
-             
-             <ProgressBar
-			    android:id="@+id/manager_used_space_bar"
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content" 
-				style="@style/UsedSpaceProgressBar"  
-				android:layout_marginLeft="10dp"
-				android:layout_marginRight="10dp"
-				android:layout_marginBottom="2dp"
-				android:layout_marginTop="2dp" 
-				android:layout_below="@id/navigation_drawer_used_space_text" />
-             
-             <TextView
-		        android:id="@+id/navigation_drawer_used_space"
-		        android:layout_height="wrap_content"
-		        android:layout_width="wrap_content"
-		        android:textSize="14sp"
-		        android:textColor="#9b9b9b"
-		        android:paddingLeft="10dp"
-		        android:text="0"
-		        android:textStyle="bold"
-		        tools:fontFamily="sans-serif-medium"
-		        android:layout_below="@id/manager_used_space_bar"/>
-             
-             <TextView
-		        android:id="@+id/navigation_drawer_total_space"
-		        android:layout_height="wrap_content"
-		        android:layout_width="wrap_content"
-		        android:textSize="14sp"
-		        android:textColor="#9b9b9b"
-		        android:paddingRight="10dp"
-		        android:text="50GB"
-		        android:textStyle="bold"
-		        tools:fontFamily="sans-serif-medium"
-		        android:layout_below="@id/manager_used_space_bar"
-		        android:layout_alignParentRight="true"/>
-             
-         </RelativeLayout>   
+
+    <android.support.design.widget.NavigationView
+        android:id="@+id/navigation_view"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:background="#ffffff"
+        android:clipToPadding="false"
+        android:paddingBottom="96dp"
+        app:headerLayout="@layout/nav_header"
+        app:itemBackground="@drawable/navigation_view_item_background"
+        app:itemIconTint="@color/drawer_item_text"
+        app:itemTextColor="@color/drawer_item_text"
+        app:menu="@menu/navigation_drawer_items" >
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="96dp"
+            android:layout_gravity="bottom"
+            android:layout_marginBottom="-96dp"
+            android:background="#ffffff" >
+
+            <TextView
+                android:id="@+id/navigation_drawer_used_space_text"
+                style="@style/NavDrawerAccountUsedSpaceText"
+                android:text="@string/my_account_used_space"
+                android:textStyle="bold"
+                tools:fontFamily="sans-serif-medium" />
+
+            <ProgressBar
+                android:id="@+id/manager_used_space_bar"
+                style="@style/UsedSpaceProgressBar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/navigation_drawer_used_space_text"
+                android:layout_marginBottom="2dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="2dp" />
+
+            <TextView
+                android:id="@+id/navigation_drawer_used_space"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/manager_used_space_bar"
+                android:paddingLeft="10dp"
+                android:text="0"
+                android:textColor="#9b9b9b"
+                android:textSize="14sp"
+                android:textStyle="bold"
+                tools:fontFamily="sans-serif-medium" />
+
+            <TextView
+                android:id="@+id/navigation_drawer_total_space"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_below="@id/manager_used_space_bar"
+                android:paddingRight="10dp"
+                android:text="50GB"
+                android:textColor="#9b9b9b"
+                android:textSize="14sp"
+                android:textStyle="bold"
+                tools:fontFamily="sans-serif-medium" />
+        </RelativeLayout>
     </android.support.design.widget.NavigationView>
-     
+
 </android.support.v4.widget.DrawerLayout>
