--- a/res/layout-v21/fragment_contact_properties.xml
+++ b/res/layout-v21/fragment_contact_properties.xml
@@ -1,182 +1,191 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/contact_properties_complete_relative_layout"
-	android:layout_width="match_parent"
-	android:layout_height="match_parent" >
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" >
 
-
-	<com.nirhart.parallaxscroll.views.ParallaxScrollView 
-	    xmlns:app="http://schemas.android.com/apk/res-auto"
-	    android:id="@+id/contact_properties_scroll_view"
-	    android:layout_width="match_parent"
-	    android:layout_height="match_parent"
-	    app:parallax_factor="1.9"
-	    tools:context=".ManagerActivity" 
-	    android:background="@color/white">
-	    
-	    <RelativeLayout
-	        android:id="@+id/contact_properties_main_layout"
-	        android:layout_width="match_parent"
-	        android:layout_height="wrap_content"
-	        android:orientation="vertical">
-	        
-	        <RelativeLayout
-	            android:id="@+id/contact_properties_image_layout"
-	            android:layout_width="match_parent"
-	            android:layout_height="wrap_content"
-	            android:fitsSystemWindows="true" 
-	            android:layout_alignParentTop="true">
-	
-                <RelativeLayout
-		            android:layout_width="match_parent"
-		            android:layout_height="wrap_content"
-		            android:fitsSystemWindows="true"
-		            app:layout_collapseMode="parallax"
-		            android:background="@color/lollipop_primary_color" >
-		            
-	                <TextView
-			            android:id="@+id/contact_properties_toolbar_initial_letter"
-			            android:layout_width="wrap_content"
-			   			android:layout_height="wrap_content"
-			   			android:layout_centerInParent="true"
-			   			android:paddingBottom="5dp" />
-		
-		            <ImageView
-		                android:id="@+id/contact_properties_toolbar_image"
-		                android:layout_width="match_parent"
-		                android:layout_height="wrap_content"
-		                android:adjustViewBounds="true"
-		                android:scaleType="fitCenter" />
-		        </RelativeLayout>
-	
-	        </RelativeLayout>
-	        
-	        <LinearLayout
-		        android:id="@+id/contact_properties_email_layout"
-		        android:layout_width="fill_parent"
-		        android:layout_height="wrap_content"
-		        android:background="@color/white"
-		        android:gravity="left"
-		        android:orientation="horizontal" 
-		        android:layout_below="@id/contact_properties_image_layout">
-		
-		        <ImageView
-		            android:id="@+id/contact_properties_email_icon"
-		            style="@style/dialogActionButton"
-		            android:layout_width="wrap_content"
-		            android:layout_height="wrap_content"
-		            android:src="@drawable/ic_share" />
-		
-		        <LinearLayout
-		            android:id="@+id/contact_properties_email_text_layout"
-		            android:layout_width="fill_parent"
-		            android:layout_height="wrap_content"
-		            android:background="@color/white"
-		            android:gravity="left"
-		            android:orientation="vertical" >
-		
-		            <TextView
-		                android:id="@+id/contact_properties_email_label"
-		                android:layout_width="wrap_content"
-		                android:layout_height="wrap_content"
-		                android:text="@string/email_text"
-		                android:textColor="@color/file_properties_info_menu"
-		                android:textStyle="bold" />
-		
-		            <TextView
-		                android:id="@+id/contact_properties_email"
-		                android:layout_width="wrap_content"
-		                android:layout_height="wrap_content"
-		                android:textColor="@color/file_properties_info_menu" />
-		        </LinearLayout>
-		    </LinearLayout>
-		
-		    <LinearLayout
-		        android:id="@+id/contact_properties_shared_folders_layout"
-		        android:layout_width="fill_parent"
-		        android:layout_height="wrap_content"
-		        android:background="@color/white"
-		        android:gravity="left"
-		        android:orientation="horizontal"
-		        android:layout_below="@id/contact_properties_email_layout" >
-		
-		        <ImageView
-		            android:id="@+id/contact_properties_shared_folder_icon"
-		            style="@style/dialogActionButton"
-		            android:layout_width="wrap_content"
-		            android:layout_height="wrap_content"
-		            android:src="@drawable/ic_share" />
-		
-		        <TextView
-		            android:id="@+id/contact_properties_shared_folders_label"
-		            android:layout_width="wrap_content"
-		            android:layout_height="wrap_content"
-		            android:layout_gravity="center_horizontal"
-		            android:text="@string/section_shared_items"
-		            android:textColor="@color/file_properties_info_menu"
-		            android:textStyle="bold" />
-		
-		        <TextView
-		            android:id="@+id/contact_properties_shared_folders_button"
-		            android:layout_width="wrap_content"
-		            android:layout_height="wrap_content"
-		            android:layout_gravity="center_horizontal"
-		            android:gravity="left"
-		            android:textColor="@color/accentColor" />
-		    </LinearLayout>
-	        
-		</RelativeLayout>
-
-	</com.nirhart.parallaxscroll.views.ParallaxScrollView>
-	
-	<RelativeLayout
-        android:id="@+id/contact_properties_toolbar_layout" 
-        android:layout_height="wrap_content"
+    <com.nirhart.parallaxscroll.views.ParallaxScrollView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/contact_properties_scroll_view"
         android:layout_width="match_parent"
-        android:background="@drawable/gradient_shape"
+        android:layout_height="match_parent"
+        android:background="@color/white"
+        app:parallax_factor="1.9"
+        tools:context=".ManagerActivity" >
+
+        <RelativeLayout
+            android:id="@+id/contact_properties_main_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
+
+            <RelativeLayout
+                android:id="@+id/contact_properties_image_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:fitsSystemWindows="true" >
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:layout_collapseMode="parallax"
+                    android:background="@color/lollipop_primary_color"
+                    android:fitsSystemWindows="true" >
+
+                    <TextView
+                        android:id="@+id/contact_properties_toolbar_initial_letter"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerInParent="true"
+                        android:paddingBottom="5dp" />
+
+                    <ImageView
+                        android:id="@+id/contact_properties_toolbar_image"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:adjustViewBounds="true"
+                        android:scaleType="fitCenter" />
+                </RelativeLayout>
+            </RelativeLayout>
+
+            <!-- MAIL LAYOUT -->
+            
+            <RelativeLayout
+                android:id="@+id/contact_properties_email_layout"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/contact_properties_image_layout"
+                android:background="@color/white"
+                android:gravity="left" >
+
+                <ImageView
+                    android:id="@+id/contact_properties_email_icon"
+                    style="@style/dialogActionButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_email_grey" />
+
+                <RelativeLayout
+                    android:id="@+id/contact_properties_email_text_layout"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/white"
+                    android:layout_centerVertical="true"
+                    android:layout_gravity="left|center_vertical"                    
+                    android:layout_toRightOf="@id/contact_properties_email_icon" >
+
+                    <TextView
+                        android:id="@+id/contact_properties_email_label"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/email_text"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/contact_properties_email"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/contact_properties_email_label"
+                        android:textColor="@color/file_properties_info_menu" />
+                </RelativeLayout>
+            </RelativeLayout>
+
+            <View
+                android:id="@+id/divider_shared_layout"
+                android:layout_width="fill_parent"
+                android:layout_height="1dp"
+                android:layout_below="@id/contact_properties_email_layout"
+                android:background="@color/separator_grey" />
+
+            <!-- SHARED LAYOUT -->
+
+            <RelativeLayout
+                android:id="@+id/contact_properties_shared_folders_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/divider_shared_layout" >
+
+                <ImageView
+                    android:id="@+id/contact_properties_shared_folder_icon"
+                    style="@style/dialogActionButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="left"
+                    android:src="@drawable/ic_shared_with_grey" />
+
+                <TextView
+                    android:id="@+id/contact_properties_shared_folders_label"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_gravity="left|center_vertical"
+                    android:layout_toRightOf="@id/contact_properties_shared_folder_icon"
+                    android:text="@string/section_shared_items"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/contact_properties_shared_folders_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:textColor="@color/accentColor"
+                    android:textStyle="bold" />
+            </RelativeLayout>
+        </RelativeLayout>
+    </com.nirhart.parallaxscroll.views.ParallaxScrollView>
+
+    <RelativeLayout
+        android:id="@+id/contact_properties_toolbar_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true">
-	    <RelativeLayout
-	           android:id="@+id/contact_properties_toolbar_back_options_layout"
-	           android:layout_width="match_parent"
-	           android:layout_height="56dp" >
-	       
-		    <ImageView 
-		        android:id="@+id/contact_properties_toolbar_back"
-		        android:layout_width="wrap_content"
-		        android:layout_height="wrap_content"
-		        android:src="@drawable/ic_arrow_back_white"
-		        android:layout_alignParentLeft="true"
-		        android:layout_centerVertical="true"
-		        style="@style/dialogActionButton" />
-		    
-		    <ImageView 
-		        android:id="@+id/contact_properties_toolbar_overflow"
-		        android:layout_width="wrap_content"
-		        android:layout_height="wrap_content"
-		        android:src="@drawable/ic_dots_vertical_white"
-		        android:layout_alignParentRight="true"
-		        android:layout_centerVertical="true"
-		        style="@style/dialogActionButton" />
-	    </RelativeLayout>
-	</RelativeLayout>
-	
-    <RelativeLayout  
-		android:layout_width="200dp"
-		android:layout_height="wrap_content"
-		android:id="@+id/contact_properties_overflow_menu_layout"
-		android:background="#ffffffff"
+        android:background="@drawable/gradient_shape" >
+
+        <RelativeLayout
+            android:id="@+id/contact_properties_toolbar_back_options_layout"
+            android:layout_width="match_parent"
+            android:layout_height="56dp" >
+
+            <ImageView
+                android:id="@+id/contact_properties_toolbar_back"
+                style="@style/dialogActionButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true"
+                android:src="@drawable/ic_arrow_back_white" />
+
+            <ImageView
+                android:id="@+id/contact_properties_toolbar_overflow"
+                style="@style/dialogActionButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:src="@drawable/ic_dots_vertical_white" />
+        </RelativeLayout>
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/contact_properties_overflow_menu_layout"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_marginRight="5dp"
-        android:layout_marginTop="5dp">
-       
+        android:layout_marginTop="5dp"
+        android:background="#ffffffff" >
+
         <ListView
             android:id="@+id/contact_properties_overflow_menu_list"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
-			android:layout_marginLeft="0dp"
-			android:background="#00000000"
-			android:divider="@null" />
+            android:layout_marginLeft="0dp"
+            android:background="#00000000"
+            android:divider="@null" />
     </RelativeLayout>
+
 </RelativeLayout>
