--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -61,6 +61,9 @@
     <color name="black">#000000</color>
     <color name="orange">#FFFFBB33</color>
     <color name="blue">#FF33B5E5</color>
+    <color name="upgrade_orange">#ffa500</color>
+    <color name="upgrade_grey">#8d8d8d</color>
+    <color name="upgrade_red">#d90007</color>
     
     <color name="tab_pressed">#ee0008</color>
     
