--- a/res/layout-v21/fragment_contact_properties.xml
+++ b/res/layout-v21/fragment_contact_properties.xml
@@ -52,10 +52,35 @@
             <!-- MAIL LAYOUT -->
             
             <RelativeLayout
+                android:id="@+id/contact_properties_name_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" 
+                android:layout_below="@id/contact_properties_image_layout">
+
+                <ImageView
+	                android:id="@+id/contact_properties_name_icon"
+	                style="@style/dialogActionButton"
+	                android:layout_width="wrap_content"
+	                android:layout_height="wrap_content"
+	                android:gravity="left"
+	                android:src="@drawable/ic_link_grey"
+	                android:visibility="invisible" />
+                
+                <TextView
+                    android:id="@+id/contact_properties_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_gravity="left|center_vertical"
+                    android:textStyle="bold"
+                    android:layout_toRightOf="@id/contact_properties_name_icon"/>
+            </RelativeLayout>
+            
+            <RelativeLayout
                 android:id="@+id/contact_properties_email_layout"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/contact_properties_image_layout"
+                android:layout_below="@id/contact_properties_name_layout"
                 android:background="@color/white"
                 android:gravity="left" >
 
