--- a/res/layout-v21/fragment_filebrowserlist.xml
+++ b/res/layout-v21/fragment_filebrowserlist.xml
@@ -277,7 +277,8 @@
                     android:id="@+id/file_list_option_permissions_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:paddingBottom="10dp"
+                    android:paddingBottom="2dp"
+                    android:paddingTop="2dp"
                     android:text="@string/file_properties_shared_folder_select_contact"
                     android:textColor="@color/black"
                     android:textSize="14sp"
@@ -304,7 +305,8 @@
                     android:id="@+id/file_list_option_clear_share_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:paddingBottom="10dp"
+                    android:paddingBottom="2dp"
+                    android:paddingTop="2dp"
                     android:text="@string/context_clean_shares_menu"
                     android:textColor="@color/black"
                     android:textSize="14sp"
