--- a/res/layout-v21/activity_pin_lock.xml
+++ b/res/layout-v21/activity_pin_lock.xml
@@ -28,7 +28,7 @@
         android:textColor="@color/mega_text" />
 
     <LinearLayout
-        android:id="@+id/pin_layout"
+        android:id="@+id/four_pin_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/unlock_text_view"
@@ -72,12 +72,77 @@
             android:inputType="numberPassword"
             android:maxLength="1" />
     </LinearLayout>
+    
+    <LinearLayout
+        android:id="@+id/six_pin_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/unlock_text_view"
+        android:background="@color/white"
+        android:gravity="center_horizontal"
+        android:orientation="horizontal" 
+        android:visibility="gone">
+
+        <EditText
+            android:id="@+id/six_pass_first"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_gravity="left"
+            android:imeOptions="actionNext"
+            android:inputType="numberPassword"
+            android:maxLength="1" />
+
+        <EditText
+            android:id="@+id/six_pass_second"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_gravity="left"
+            android:imeOptions="actionNext"
+            android:inputType="numberPassword"
+            android:maxLength="1" />
+
+        <EditText
+            android:id="@+id/six_pass_third"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_gravity="left"
+            android:imeOptions="actionNext"
+            android:inputType="numberPassword"
+            android:maxLength="1" />
+        
+        <EditText
+            android:id="@+id/six_pass_fourth"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_gravity="left"
+            android:imeOptions="actionNext"
+            android:inputType="numberPassword"
+            android:maxLength="1" />
+
+        <EditText
+            android:id="@+id/six_pass_fifth"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_gravity="left"
+            android:imeOptions="actionNext"
+            android:inputType="numberPassword"
+            android:maxLength="1" />
+
+        <EditText
+            android:id="@+id/six_pass_sixth"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_gravity="left"
+            android:imeOptions="actionDone"
+            android:inputType="numberPassword"
+            android:maxLength="1" />
+    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/warning_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/pin_layout"
+        android:layout_below="@id/four_pin_layout"
         android:background="@color/white"
         android:gravity="center_horizontal|center_vertical"
         android:orientation="horizontal" >
